@@ -1,3 +1,10 @@
+Thu Aug 20 13:04:08 PDT 1998 Manish Singh <yosh@gimp.org>
+
+	* gdk/gdkrgb.c: silly visual fixes
+
+	* gtk/testgtk.c: call gdk_rgb_init so color preview test actually
+	works
+
 1998-08-20  Federico Mena Quintero  <federico@nuclecu.unam.mx>
 
 	* gtk/gtkhandlebox.c (gtk_handle_box_button_changed): Do not do
